<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="46dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        app:srcCompat="@drawable/common_full_open_on_phone" />

    <TextView
        android:id="@+id/fname"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:text="@string/fname" />

    <TextView
        android:id="@+id/number"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fname"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:text="@string/number" />

    <TextView
        android:id="@+id/email"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:text="@string/email1" />
</RelativeLayout>
